--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,12 @@
     "keywords": ["dbal", "database", "persistence", "queryobject"],
     "homepage": "http://www.doctrine-project.org",
     "license": "MIT",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/fabiocarneiro/common"
+        }
+    ],
     "authors": [
         {"name": "Guilherme Blanco", "email": "guilhermeblanco@gmail.com"},
         {"name": "Roman Borschel", "email": "roman@code-factory.org"},
@@ -13,7 +19,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "doctrine/common": ">=2.4,<2.6-dev"
+        "doctrine/common": "dev-new-interface-for-classmetadata-properties",
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
