--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "doctrine/common": "dev-new-interface-for-classmetadata-properties",
+        "doctrine/common": "dev-new-interface-for-classmetadata-properties"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
